prevent schedule text wrapping

--- a/css/calendar.css
+++ b/css/calendar.css
@@ -47,7 +47,7 @@ ul {list-style-type: none;}
 
 .weekdays li {
   display: inline-block;
-  width: 13.6%;
+  width: 12.6%;
   color: #666;
   text-align: center;
 }
@@ -63,7 +63,7 @@ ul {list-style-type: none;}
   list-style-type: none;
   padding: 10px 0;
   display: inline-block;
-  width: 13.6%;
+  width: 12.6%;
   text-align: center;
   vertical-align: top;
   margin-bottom: 5px;
